# cortinas-inteligentes-iot

./: .gitignore  CMakeLists.txt  README.md  lwipopts.h  main.c  matrizled.c
lib/: matrizled.c  matrizled.h
